[metadata]
name = chisel
version = 1.9.8
url = https://github.com/craigahobbs/chisel
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = Lightweight WSGI application framework, schema-validated JSON APIs, and API documentation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = api, json, framework, schema, wsgi
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = chisel, chisel.static
package_dir =
    = src
install_requires=
    schema-markdown >= 1.2.0

[options.package_data]
chisel =
    static/*.bare
    static/*.html
    static/*.tar.gz
